--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,8 @@ firebase-debug.log*
 # it commented so all members can deploy to the same project(s) in .firebaserc.
 # .firebaserc
 
+serviceAccountKey.json
+
 # Runtime data
 pids
 *.pid
